--- a/spa/pages-fr/register.html
+++ b/spa/pages-fr/register.html
@@ -6,9 +6,9 @@
 			</div>
 			<div class="bottom-section">
 				<div class="main-write">
-					<p class="first-line">Bon retour,</p>
-                    <p>Il y a 2 jeux sur le site. L’un est un jeu de pong rétro de 1972</p>
-                    <p>et l’autre est un jeu de tirage au sort. Le projet a été développé par les</p>
+					<p class="first-line">Toi encore?</p>
+					<p>Il y a 2 jeux sur le site. L’un est un jeu de pong rétro de 1972</p>
+					<p>et l’autre est un jeu de tirage au sort. Le projet a été développé par les</p>
 					<p>premiers étudiants de l'Ecole 42 Istanbul. S'il vous plaît, laissez-leur un</p>
                     <p>petit pourboire, car vous êtes un Français respectable. </p>
 					<div class="inline-text">
@@ -57,20 +57,15 @@
     <div class="right-side">
         <div class="content">
             <div class="input-container">
-                <h1 style="color: #FDB827;">salut mon pote,</h1>
-                <p style="color: #000">connectez-vous à votre compte</p>
-                <form id="loginUser" class="input-form-container"></form>
+                <h1 style="color: #FDB827;">Bonjour,</h1>
+                <p style="color: #000">créer un nouveau compte</p>
+                <form id="registrationForm" class="input-form-container">
                     <input type="text" id="username" placeholder="Username" required>
-                    <input type="password" id="password" placeholder="Password" required> 
-                    <button type="button"  onclick="loginUser()">Se connecter</button>
+                    <input type="password" id="password" placeholder="Password" required>
+                    <input type="password" id="confirmPassword" placeholder="Confirm Password" required>
+                    <button type="button" onclick="registerUser()">registre</button>
                 </form>
-                <p style="color: #FDB827;"> ou </p>
-                <a href="img/42account.png" target="_blank" >
-                <img src="img/42account.png" alt="42-logo" width="174" height="76">
-                </a>
-                <p style="margin-bottom: 10%; color: rgba(0, 0, 0, 0.50);"> Créer un nouvel utilisateur?
-                    <a style="color: #FDB827;" href="/register"> REGISTRE</a>
-                </p>
+                <p style="margin-bottom: 10%; color: rgba(0, 0, 0, 0.50);">Déjà membre? <a style="color: #FDB827;"  href="/login">SE CONNECTER</a></p>
             </div>
         </div>
     </div>
