--- a/spa/pages/my-profile.html
+++ b/spa/pages/my-profile.html
@@ -26,7 +26,7 @@
 				<p class="profil-online"><span class="online-dot-online"></span>online</p>
 				<div class="card-title">@zuckerberg</div>
 				<button type="button" class="btn btn-outline-warning">
-					<span class="btn-text">Settings</span>
+					<a href= "settings" class="btn-text">Settings</a>
 				</button>
 			</div>
 			<div class="inner-card">
