--- a/spa/pages/head_tail.html
+++ b/spa/pages/head_tail.html
@@ -23,17 +23,13 @@
             <h2 style="color: #5D1D88; font-size: 40px;"> Head and Tail Game !</h2>
             <div class="board" id="head-and-tail-board">
                 <div class="board-member-head">
-                    <a href="" ><img src="img/head.png" alt="Pong Logo" > </a>
+                    <a href="" ><img src="img/ataturk.png" alt="Mustafa Kemal Atatürk" style="cursor: default;" width="314" height="278"> </a>
                     <button onclick="selectOption(1)"> Yazı</button>
                 </div>
-                <div class="board-member-head" id ="head-option-atıs">
-                    <a href="" class="question-mark"><img style="width: 100px;" src="img/launch.png" alt="question-mark"></a>
-
-                </div>
+                <img src="img/hand-puh.png" alt="Hand-puh" style="width: 104px; height: 106px; margin-right: 5%;">
+				<button onclick="selectOption(2)"> Tura</button>
                 <div class="board-member-head">
-                    <a href="" class="pong-logo-link"><img src="img/tail.png" alt="Pong Logo"></a>
-                    <button onclick="selectOption(2)"> Tura</button>
-
+                    <a href=""><img src="img/cash-1.png" style="cursor: default;" alt="cash-1"></a>
                 </div>
             </div>
          </div>
