profile-settings api

--- a/spa/pages/games.html
+++ b/spa/pages/games.html
@@ -10,7 +10,7 @@
         <a href="games">
                 <img src="img/game-sign.png" alt="Game Logo" class="game-logo">
         </a>
-        <a href="my-profile">
+        <a href="/my-profile">
             <div style="margin-right: 20px;">
                 <img src="img/small-user-photo.png" alt="Profil" class="profile-img" width="46" height="46">
             </div>
