--- a/spa/pages/their-profile.html
+++ b/spa/pages/their-profile.html
@@ -26,9 +26,9 @@
 				<p class="onl-profile"><span class="online-dot-online"></span>online</p>
 				<div class="card-title">@zuckerberg</div>
 				<div class="profile-buttons">
-					<button type="button" class="btn btn-success">+add friend</button>
-					<button type="button" class="btn btn-danger">remove friend</button>
-					<button type="button" class="btn btn-light">1v1 match <img src="img/1v1-profile.png" width="16" height="13"></button>
+					<button onclick="addfriend()" type="button" class="btn btn-success">+add friend</button>
+					<button onclick="removefriend()" type="button" class="btn btn-danger">remove friend</button>
+					<button onclick="matchRequestFromProfile()" type="button" class="btn btn-light">1v1 match <img src="img/1v1-profile.png" width="16" height="13"></button>
 				</div>
 			</div>
 			<div class="inner-card">
