--- a/spa/pages/my-profile.html
+++ b/spa/pages/my-profile.html
@@ -22,14 +22,14 @@
 		<div class="rounded-profile" id="profileImageContainer">
             <img class="" src="" alt="Card image cap" width="203" height="240">
         </div>
-        <div class="cardy-middle">
-            <p class="profil-online" id="onlineStatusContainer"></p>
+		<div class="cardy-middle">
+            <p class="onl-profile" id="onlineStatusContainer"></p>
             <div class="card-title" id="usernameContainer"></div>
-            <button type="button" class="btn btn-outline-warning">
-                <a href="" class="btn-text" id="addFriendsLink">Add Friends</a>
-                <a href="settings" class="btn-text" id="settingsLink">Settings</a>
-            </button>
-        </div>
+            <div class="profile-buttons">
+                <!-- <a href="" class="btn-text" id="addFriendsLink">Add Friends</a> -->
+                <a href="settings" class="btn btn-warning" id="settingsLink">Settings</a>
+        	</div>
+		</div>
         <div class="inner-card">
             <p id="matchesCount"></p>
             <p id="tournamentCount"></p>
