--- a/spa/pages/head-and-tail.html
+++ b/spa/pages/head-and-tail.html
@@ -24,12 +24,12 @@
             <div class="board" id="head-and-tail-board">
                 <div class="board-member-head">
                     <a href="" ><img src="img/ataturk.png" alt="Mustafa Kemal Atatürk" style="cursor: default;" width="314" height="278"> </a>
-                    <button onclick="selectOption(1)"> Yazı</button>
+					<button onclick="selectOption(1)" type="button" class="btn btn-warning">Head</button>
                 </div>
                 <img src="img/hand-puh.png" alt="Hand-puh" style="width: 104px; height: 106px; margin-right: 5%;">
-				<button onclick="selectOption(2)"> Tura</button>
                 <div class="board-member-head">
-                    <a href=""><img src="img/cash-1.png" style="cursor: default;" alt="cash-1"></a>
+					<a href=""><img src="img/cash-1.png" style="cursor: default;" alt="cash-1"></a>
+					<button onclick="selectOption(1)" type="button" class="btn btn-warning">Tail</button>
                 </div>
             </div>
          </div>
