--- a/spa/pages/games.html
+++ b/spa/pages/games.html
@@ -1,13 +1,13 @@
 <navbar class="navbar">
     <div class="navbar-container">
-        <a href="games">
+        <a href="/games">
             <div style="display: flex; align-items: center; margin-left: 10px;">
                 <img src="img/site-logo.png" alt="Site Logo" class="logo" width="49.17" height="37">
                 <div style="margin-right: 10px;"></div>
                 <img src="img/trancendence-logo.png" alt="Site Name" class="logo-text" width="116" height="15">
             </div>
         </a>
-        <a href="games">
+        <a href="/games">
                 <img src="img/game-sign.png" alt="Game Logo" class="game-logo">
         </a>
         <a href="/my-profile">
