--- a/spa/pages/tournament-friends-waiting.html
+++ b/spa/pages/tournament-friends-waiting.html
@@ -20,8 +20,7 @@
 <div class="games-page">
     <div class="game-template">
         <div class="board-template">
-<<<<<<< HEAD
-=======
+
             <h2 style="color: #5D1D88; font-size: 25px; margin-top: 6%;"> invite a friend or wait...</h2>
             <div class="board-column">
 				<div class="tournament-waiting">
@@ -35,8 +34,6 @@
                     <input type="text" id="nicknameInput" placeholder=" Friend Nickname" required>
                     <button type="submit">invite</button>
                 </form>
-<<<<<<< HEAD
->>>>>>> 8fa1ca1 (start-tournament-burak)
             <h2 style="color: #5D1D88; font-size: 25px; margin-top: 6%;"> invite a friend or wait...</h2>
             <div class="board-column">
 				<div class="tournament-waiting">
@@ -52,11 +49,10 @@
                 </form>
             </div>
         </div>
-=======
-    
         	</div>
 		</div>
->>>>>>> 6bdf904 (start-tournament-burak)
+            </div>
+        </div>
     </div>
 	<div class="up-user-board">
 		<div class="users-board">
