--- a/spa/pages/tournament-friends-waiting.html
+++ b/spa/pages/tournament-friends-waiting.html
@@ -47,10 +47,21 @@
                     <input type="text" id="nicknameInput" placeholder=" Friend Nickname" required>
                     <button type="submit">invite</button>
                 </form>
+            <h2 style="color: #5D1D88; font-size: 25px; margin-top: 6%;"> invite a friend or wait...</h2>
+			<div class = "board-column">
+				<div class="tournament-waiting">
+					<a href=""> <img src="img/SAND-CLOCK.png" width="42" height="72"></a>
+					<a href=""> <img src="img/people.png" width="57" height="31"></a>
+					<h1> 1/4 </h1>
+				</div>
+			</div>
+            <div class="nick-create">
+                <form method="POST" onsubmit="putTheNick(event)">
+                    <input type="text" id="nicknameInput" placeholder=" Friend Nickname" required>
+                    <button type="submit">invite</button>
+                </form>
             </div>
         </div>
-        	</div>
-		</div>
     </div>
 	<div class="up-user-board">
 		<div class="users-board">
