--- a/spa/pages/tournament-friends-waiting.html
+++ b/spa/pages/tournament-friends-waiting.html
@@ -39,8 +39,10 @@
 				</div>
 			</div>
             <div class="nick-create">
-                <input type="text" id="nickname" placeholder=" Friend Nickname">
-                <button>invite</button>
+                <form method="POST" onsubmit="putTheNick(event)">
+                    <input type="text" id="nicknameInput" placeholder=" Friend Nickname" required>
+                    <button type="submit">invite</button>
+                </form>
             </div>
         </div>
     </div>
