1v1-requests and tournament-friends-waiting added

--- a/spa/pages/request-1v1-match.html
+++ b/spa/pages/request-1v1-match.html
@@ -20,15 +20,27 @@
 <div class="games-page">
     <div class="game-template">
         <div class="board-template">
-            <h2 style="color: #5D1D88; font-size: 25px; margin-top: 6%;"> woww, that’ll be crazy TOURNAMENT!</h2>
-            <div class="board-column">
-                <a href=""> <img src="img/sand-watch.jpg"></a>
-                <a href="" class="question-mark"><img src="img/eightsome.jpg" alt="question-mark"></a>
+            <h3 style="color: #5D1D88; font-size: 40px;"> Zongg! A war request has come to you! </h3>
+            <div class="board">
+				<div class="rounded-image-container">
+					<a href="https://twitter.com/elonmusk" target="_blank">
+						<img src="img/elon-musk.jpg" alt="elon-musk">
+					</a>
+				</div>
+				<div class="">
+					<img src="img/war-request.png" alt="war-request" style="width: 122px; height: 104px;">
+				</div>
+				<div class="rounded-image-container">
+					<a href="" style="cursor: default;">
+						<img src="img/1v1-profile-img.png" alt="Pong Logo" style="width: 170px; height: 170px;">
+					</a>
+				</div>
             </div>
-            <div class="nick-create">
-                <input type="text" id="nickname" placeholder=" Friend Nickname">
-                <button>invite</button>
-            </div>
+			<div class="left-right">
+				<button>WAR ⚔</button>
+				<div style="margin-right: 40px;"></div>
+				<button>Chicken 🐓</button>
+			</div>
         </div>
     </div>
 	<div class="up-user-board">
