--- a/spa/pages/request-tournament.html
+++ b/spa/pages/request-tournament.html
@@ -35,7 +35,7 @@
 				</div>	
             </div>
 			<div class="left-right">
-				<button>Join ⚔</button>
+				<button onclick="goToTournament();">Join ⚔</button>
 				<div style="margin-right: 40px;"></div>
 				<button>Deny 🐓</button>
 			</div>
