--- a/spa/pages/create-tournament.html
+++ b/spa/pages/create-tournament.html
@@ -25,8 +25,7 @@
                 <a href="" class="pong-logo-link"><img src="img/tournament-graph.png" alt="tournament-graph"></a>
             </div>
 			<div class="left-right" id="sadecebu">
-				<form method="POST" onsubmit="putTheNick(event)">
-                    <input type="text" class="nickname" id="nicknameInput" placeholder="Nickname" required>
+				<form method="POST" onsubmit="createTournament()">
                     <button type="submit">Create</button>
                 </form>		
 			</div>
