--- a/spa/pages/tournament-tables.html
+++ b/spa/pages/tournament-tables.html
@@ -33,7 +33,7 @@
 						</table>
 					</section>
 					<section class="table__body">
-						<table>
+						<!-- <table>
 							<thead>
 								<tr>
 									<th> match order </th>
@@ -64,47 +64,7 @@
 									<th> ?? </th>
 								</tr>
 							</tbody>
-							<tbody>
-								<tr>
-									<th> 3. </th>
-									<th> msenipek </th>
-									<th><img src="img/vs-sign.png" alt="vs-sign" width="48" height="48"></th>
-									<th> ronaldinho </th>
-									<th> ?? </th>
-									<th> ?? </th>
-								</tr>
-							</tbody>
-							<tbody>
-								<tr>
-									<th> 4. </th>
-									<th> michael </th>
-									<th><img src="img/vs-sign.png" alt="vs-sign" width="48" height="48"></th>
-									<th> leo </th>
-									<th> ?? </th>
-									<th> ?? </th>
-								</tr>
-							</tbody>
-							<tbody>
-								<tr>
-									<th> 5. </th>
-									<th> jackson </th>
-									<th><img src="img/vs-sign.png" alt="vs-sign" width="48" height="48"></th>
-									<th> george </th>
-									<th> ?? </th>
-									<th> ?? </th>
-								</tr>
-							</tbody>
-							<tbody>
-								<tr>
-									<th> 6. </th>
-									<th> harry </th>
-									<th><img src="img/vs-sign.png" alt="vs-sign" width="48" height="48"></th>
-									<th> potter </th>
-									<th> ?? </th>
-									<th> ?? </th>
-								</tr>
-							</tbody>
-						</table>
+						</table> -->
 					</section>
 				</main>
 			</div>
