--- a/spa/pages/request-tournament.html
+++ b/spa/pages/request-tournament.html
@@ -37,7 +37,7 @@
 			<div class="left-right">
 				<button onclick="goToTournament();">Join ⚔</button>
 				<div style="margin-right: 40px;"></div>
-				<button>Deny 🐓</button>
+				<button onclick="goMain();">Deny 🐓</button>
 			</div>
         </div>
     </div>
