--- a/spa/pages/my-profile.html
+++ b/spa/pages/my-profile.html
@@ -40,7 +40,7 @@
 			<img src="img/site-logo.png" alt="pong-logo" width="62" height="47">
 		</div>
 		<div class="scrollable-table-container">
-			<table class="scrollable-table">
+			<table class="scrollable-table" id="scroll_table">
 			<thead>
 				<tr>
 				<th>Date</th>
