--- a/spa/pages/tournament-tables.html
+++ b/spa/pages/tournament-tables.html
@@ -23,16 +23,7 @@
                 <h2 style="color: #5D1D88; font-size: 35px;"> the tournaments is starts!</h2>
                 <main class="table">
 					<section class="table__header"></section>
-					<section class="table__body">
-						<table>
-							<thead>
-								<tr>
-									<th>First Matches</th>
-								</tr>
-							</thead>
-						</table>
-					</section>
-					<section class="table__body">
+					<section class="table__body" id="table_body_id">
 						<!-- <table>
 							<thead>
 								<tr>
