--- a/spa/pages/create-tournament.html
+++ b/spa/pages/create-tournament.html
@@ -25,9 +25,9 @@
                 <a href="" class="pong-logo-link"><img src="img/tournament-graph.png" alt="tournament-graph"></a>
             </div>
 			<div class="left-right" id="sadecebu">
-				<form method="POST" onsubmit="createTournament()">
-                    <button type="submit">Create</button>
-                </form>		
+				<form id="createTournamentForm" method="POST">
+					<button type="button" onclick="createTournament()">Create</button>
+				</form>
 			</div>
         </div>
     </div>
