--- a/spa/pages/my-profile.html
+++ b/spa/pages/my-profile.html
@@ -40,90 +40,16 @@
 			<img src="img/site-logo.png" alt="pong-logo" width="62" height="47">
 		</div>
 		<div class="scrollable-table-container">
-			<table class="scrollable-table" id="scroll_table">
-			<thead>
-				<tr>
-				<th>Date</th>
-				<th>Username</th>
-				<th>Score</th>
-				<th>W/L</th>
-				</tr>
-			</thead>
-			<tbody>
-				<tr>
-					<td>19.05.2023</td>
-					<td>elon</td>
-					<td>4-1</td>
-					<td>W</td>
-				</tr>
-				<tr>
-					<td>21.05.2023</td>
-					<td>jeffrey</td>
-					<td>2-3</td>
-					<td>L</td>
-				</tr>
-				<tr>
-					<td>23.05.2023</td>
-					<td>tommy</td>
-					<td>1-7</td>
-					<td>L</td>
-				</tr>
-				<tr>
-					<td>24.05.2023</td>
-					<td>jones</td>
-					<td>6-1</td>
-					<td>W</td>
-				</tr>
-				<!-- Diğer satırlar buraya eklenecek -->
-			</tbody>
-			</table>
+			<table class="scrollable-table" id="scroll_table"></table>
 		</div>
 		<div class="table-top-photo">
 			<img src="img/only-cash.png" alt="cash-logo" width="58" height="38">
 		</div>
 		<div class="scrollable-table-container">
-			<table class="scrollable-table">
-			<thead>
-				<tr>
-					<th>Date</th>
-					<th>Username</th>
-					<th>W\L</th>
-				</tr>
-			</thead>
-			<tbody>
-				<tr>
-					<td>31.05.2023</td>
-					<td>elon</td>
-					<td>W</td>
-				</tr>
-				<tr>
-					<td>01.08.2023</td>
-					<td>holly</td>
-					<td>L</td>
-				</tr>
-				<tr>
-					<td>15.09.2023</td>
-					<td>morgan</td>
-					<td>W</td>
-				</tr>
-				<tr>
-					<td>20.11.2023</td>
-					<td>lenny</td>
-					<td>W</td>
-				</tr>
-				<!-- Diğer satırlar buraya eklenecek -->
-			</tbody>
+			<table class="scrollable-table" id="scroll_table_other">
 			</table>
 		</div>
 	</div>
-
 </div>
-
-
-	
-<!--         <div class="users-board-buttons">
-			<button class="users-board-button" href="" onclick="event.preventDefault(); renderPage('settings')"> Edit Profile </button>
-			<button class="users-board-button" > Delete Profile </button>
-		</div> -->
 	
 	
