--- a/spa/pages/games.html
+++ b/spa/pages/games.html
@@ -47,5 +47,5 @@
 				</div>
 			</div>
 		</div>
-        <button onclick="authTest();" class="btn-primary"> hey</button>
+        <button onclick="authTest();"> hey</button>
 </div>
