--- a/spa/pages/my-profile.html
+++ b/spa/pages/my-profile.html
@@ -19,7 +19,7 @@
 </navbar>
 <div class ="genel">
 	<div class="cardy">
-		<div class="rounded-profile" id="profileImageContainer">
+		<div class="users-settings-photo" id="profileImageContainer">
             <img class="" src="" alt="Card image cap" width="203" height="240">
         </div>
 		<div class="cardy-middle">
@@ -30,9 +30,19 @@
         	</div>
 		</div>
         <div class="inner-card">
-            <p id="matchesCount"></p>
-            <p id="tournamentCount"></p>
-            <p id="friendsCount"></p>
+			<div class="hori-line">
+				<p>matches: </p>
+				<p id="matchesCount"></p>
+			</div>
+			<div class="hori-line">
+				<p>trophy: </p>
+				<p id="tournamentCount"></p>
+				<p>🏆</p>
+			</div>
+			<div class="hori-line">
+				<p>friends: </p>
+				<p id="friendsCount"></p>
+			</div>
         </div>
 	</div>
 	<div clas="tables">
