--- a/spa/pages/games_iframe.html
+++ b/spa/pages/games_iframe.html
@@ -1,3 +1,3 @@
-<div class="games-page">
-    <iframe src="http://ftpong.duckdns.org:2700/?gameid=hello1&gamepass=123&player=2&playerpass=p2" frameborder="0" width="1100" height="1100"></iframe>
+<div class="games-page" >
+    <iframe id="myframe"  frameborder="0" width="1100" height="1100"></iframe>
 </div>
