--- a/spa/pages/my-profile.html
+++ b/spa/pages/my-profile.html
@@ -25,9 +25,7 @@
 		<div class="cardy-middle">
             <p class="onl-profile" id="onlineStatusContainer"></p>
             <div class="card-title" id="usernameContainer"></div>
-            <div class="profile-buttons">
-                
-        	</div>
+            <div class="profile-buttons"></div>
 		</div>
         <div class="inner-card">
 			<div class="hori-line">
@@ -50,13 +48,13 @@
 			<img src="img/site-logo.png" alt="pong-logo" width="62" height="47">
 		</div>
 		<div class="scrollable-table-container">
-			<table class="scrollable-table" id="scroll_table"></table>
+			<table class="scrollable-table" id="my_scroll_table"></table>
 		</div>
 		<div class="table-top-photo">
 			<img src="img/only-cash.png" alt="cash-logo" width="58" height="38">
 		</div>
 		<div class="scrollable-table-container">
-			<table class="scrollable-table" id="scroll_table_other">
+			<table class="scrollable-table" id="my_scroll_table_other">
 			</table>
 		</div>
 	</div>
