--- a/spa/pages/games.html
+++ b/spa/pages/games.html
@@ -12,7 +12,7 @@
         </a>
         <a href="/my-profile">
             <div style="margin-right: 20px;">
-                <img src="img/small-user-photo.png" alt="Profil" class="profile-img" width="46" height="46">
+                <img id = "avatar-image-main" src="" alt="Profil" class="profile-img" width="46" height="46">
             </div>
         </a>
     </div>
