--- a/spa/pages/my-profile.html
+++ b/spa/pages/my-profile.html
@@ -11,16 +11,16 @@
                 <img src="img/game-sign.png" alt="Game Logo" class="game-logo">
         </a>
         <a href="/my-profile">
-            <div style="margin-right: 20px;">
-                <img src="img/small-user-photo.png" alt="Profil" class="profile-img" width="46" height="46">
+            <div style="margin-right: 20px;" id = "avatar-image">
+                <img id="avatar-image" src="http://localhost:8000/media/avatars/default.jpg" alt="Profil" class="profile-img" width="46" height="46">
             </div>
         </a>
     </div>
 </navbar>
 <div class ="genel">
 	<div class="cardy">
-		<div class="users-settings-photo" id="profileImageContainer">
-            <img class="" src="" alt="Card image cap" width="203" height="240">
+		<div class="users-settings-photo" id = "avatar-image">
+            <img id="avatar-image" class="" src="http://localhost:8000/media/avatars/default.jpg" alt="Card image cap">
         </div>
 		<div class="cardy-middle">
             <p class="onl-profile" id="onlineStatusContainer"></p>
