update all profile details

--- a/spa/pages/1v1match-winner-page.html
+++ b/spa/pages/1v1match-winner-page.html
@@ -26,9 +26,9 @@
 					<p class="write-caption">You WIN!</p>
                 </div>
 				<div class="left-right">
-					<button>a new pong again</button>
+					<button> <a href="/games" style="text-decoration: none; color: azure;">a new game again</a></button>
 					<div style="margin-right: 40px;"></div>
-					<button>exit</button>
+					<button> <a href="/games" style="text-decoration: none; color: azure;"> Exit</a></button>
 				</div>
 			</div>
         </div>
