--- a/spa/pages/my-profile.html
+++ b/spa/pages/my-profile.html
@@ -12,15 +12,15 @@
         </a>
         <a href="/my-profile">
             <div style="margin-right: 20px;" id = "avatar-image">
-                <img id="avatar-image" src="http://localhost:8000/media/avatars/default.jpg" alt="Profil" class="profile-img" width="46" height="46">
+                <img id="avatar-image" src="img/small-user-photo.png" alt="Profil" class="profile-img" width="46" height="46">
             </div>
         </a>
     </div>
 </navbar>
 <div class ="genel">
 	<div class="cardy">
-		<div class="users-settings-photo" id = "avatar-image">
-            <img id="avatar-image" class="" src="http://localhost:8000/media/avatars/default.jpg" alt="Card image cap">
+		<div class="users-settings-photo" id = "profileImageContainer">
+            <!-- <img id="avatar-image" class="" src="img/small-user-photo.png" alt="Card image cap"> -->
         </div>
 		<div class="cardy-middle">
             <p class="onl-profile" id="onlineStatusContainer"></p>
