--- a/spa/pages/1v1match-lose-page.html
+++ b/spa/pages/1v1match-lose-page.html
@@ -26,9 +26,9 @@
 					<p class="write-caption">Winners are those who don't give up...</p>
                 </div>
 				<div class="left-right">
-					<button>a new pong again</button>
+					<button> <a href="/games">a new game again</a></button>
 					<div style="margin-right: 40px;"></div>
-					<button>exit</button>
+					<button> <a href="/games"> Exit </a></button>
 				</div>
 			</div>
         </div>
