--- a/spa/pages/tournament-winner-page.html
+++ b/spa/pages/tournament-winner-page.html
@@ -29,9 +29,9 @@
 				<p class="green-write">Your reward has been added to your profile. 🏆</p>
 			</div>
 			<div class="left-right">
-				<button>exit tournament</button>
+				<button> <a href="/games" style="text-decoration: none;"> exit tournament</a></button>
 				<div style="margin-right: 40px;"></div>
-				<button>go to profile</button>
+				<button> <a href="/my-profile">go to profile</a></button>
 			</div>
 		</div>
 	</div>
